--- a/assessments.html
+++ b/assessments.html
@@ -2,44 +2,34 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Assessment Students</title>
+<title>Assessment Students - CBC Compliant</title>
 <style>
-  body { font-family: Arial, sans-serif; margin: 20px; }
-  table { border-collapse: collapse; width: 100%; margin-top: 20px; }
-  th, td { border: 1px solid #ccc; padding: 8px; text-align: left; }
-  th { background: #f0f0f0; }
-  select, input { width: 100%; padding: 4px; }
-  button { margin-top: 15px; padding: 8px 12px; cursor: pointer; }
-  .competency-section { margin-top: 20px; }
-
-
-.competency-checkbox {
-  display: block;
-  margin-bottom: 6px;
-  cursor: pointer;
-}
-
-.competency-checkbox input {
-  margin-right: 6px;
-}
-  
+body { font-family: Arial, sans-serif; margin: 20px; }
+table { border-collapse: collapse; width: 100%; margin-top: 20px; }
+th, td { border: 1px solid #ccc; padding: 8px; text-align: left; }
+th { background: #f0f0f0; }
+select, input { width: 100%; padding: 4px; }
+button { margin-top: 15px; padding: 8px 12px; cursor: pointer; }
+.competency-section { margin-top: 20px; }
+.competency-checkbox { display: block; margin-bottom: 6px; cursor: pointer; }
+.competency-checkbox input { margin-right: 6px; }
 </style>
 </head>
 <body>
-<h2>New Assessment Table</h2>
+<h2>New CBC Assessment Table</h2>
 
 <p><strong>Academic Year:</strong> <span id="yearLabel"></span></p>
 <p><strong>Class:</strong> <span id="classLabel"></span></p>
 <p><strong>Subject:</strong> <span id="subjectLabel"></span></p>
 
 <p>
-  <label>Term:</label>
-  <select id="termSelect"></select>
+<label>Term:</label>
+<select id="termSelect"></select>
 </p>
 
 <p>
-  <label>Assessment Type:</label>
-  <select id="assessmentTypeSelect"></select>
+<label>Assessment Type:</label>
+<select id="assessmentTypeSelect"></select>
 </p>
 
 <!-- Core Competencies -->
@@ -51,39 +41,38 @@
 <!-- Subject-specific manual input -->
 <div class="competency-section">
   <label>Subject-specific Competencies (manual input):</label>
-  <input type="text" id="subjectCompetency" 
-         placeholder="Enter subject-specific competencies, comma-separated">
+  <input type="text" id="subjectCompetency" placeholder="Enter subject-specific competencies, comma-separated">
 </div>
 
-<p>
-  <label>Strand(s):</label>
-  <input type="text" id="strandInput" placeholder="Enter strand(s)">
-</p>
-
-<p>
-  <label>Substrand (optional):</label>
-  <input type="text" id="substrandInput" placeholder="Enter substrand">
-</p>
+<!-- Strands & Substrands -->
+<div class="competency-section">
+  <label>Strand:</label>
+  <select id="strandSelect"></select>
+</div>
+<div class="competency-section">
+  <label>Substrand:</label>
+  <select id="substrandSelect"></select>
+</div>
 
 <table>
-  <thead>
-    <tr>
-      <th>Adm/Assess NO.</th>
-      <th>Name</th>
-      <th>Performance Level</th>
-    </tr>
-  </thead>
-  <tbody id="studentsBody">
-    <tr><td colspan="3">Loading students...</td></tr>
-  </tbody>
+<thead>
+<tr>
+  <th>Adm/Assess NO.</th>
+  <th>Name</th>
+  <th>Performance Level</th>
+</tr>
+</thead>
+<tbody id="studentsBody">
+<tr><td colspan="3">Loading students...</td></tr>
+</tbody>
 </table>
 
 <br>
 <button id="saveAssessment">Save Assessment</button>
 <p id="status"></p>
+
 <script type="module">
 import { createClient } from "https://cdn.jsdelivr.net/npm/@supabase/supabase-js/+esm";
-
 const supabase = createClient(
   "https://zcmzuetusvpmvubbjlmx.supabase.co",
   "sb_publishable_-BGJLAySaH7bQ5lBIZF9zg_eohK-xEn"
@@ -91,132 +80,132 @@ const supabase = createClient(
 
 const SYSTEM_YEAR = 2026;
 document.getElementById("yearLabel").innerText = SYSTEM_YEAR;
-
 const classId = localStorage.getItem("class_id");
 const subjectId = localStorage.getItem("subject_id");
 const academicYear = localStorage.getItem("academic_year") || SYSTEM_YEAR;
 
-if (!classId || !subjectId) {
-  alert("Please select a class and subject first.");
-  window.location.href="teacher-dashboard.html";
-}
+if(!classId || !subjectId){ alert("Select class and subject."); window.location.href="teacher-dashboard.html"; }
 
-// Display class and subject
+// Fetch class & subject names
 const { data: classData } = await supabase.from("classes").select("name").eq("id", classId).single();
 const { data: subjectData } = await supabase.from("subjects").select("name").eq("id", subjectId).single();
 document.getElementById("classLabel").innerText = classData?.name || "N/A";
 document.getElementById("subjectLabel").innerText = subjectData?.name || "N/A";
 
 // Load terms
-const { data: terms } = await supabase.from("terms").select("id, name");
-document.getElementById("termSelect").innerHTML = `<option value="" disabled selected>-- Select Term --</option>${terms.map(t => `<option value="${t.id}">${t.name}</option>`).join("")}`;
+const { data: terms } = await supabase.from("terms").select("id, name, start_date, end_date");
+document.getElementById("termSelect").innerHTML = `<option value="" disabled selected>-- Select Term --</option>` + 
+  terms.map(t => `<option value="${t.id}" data-start="${t.start_date}" data-end="${t.end_date}">${t.name}</option>`).join("");
 
-// Load assessment types
-const { data: assessmentTypes } = await supabase.from("assessment_types").select("id, name");
-document.getElementById("assessmentTypeSelect").innerHTML = `<option value="" disabled selected>-- Select Assessment Type --</option>${assessmentTypes.map(a => `<option value="${a.id}">${a.name}</option>`).join("")}`;
+// Load assessment types (with weights)
+const { data: assessmentTypes } = await supabase.from("assessment_types").select("id, name, weight");
+document.getElementById("assessmentTypeSelect").innerHTML = `<option value="" disabled selected>-- Select Assessment Type --</option>` +
+  assessmentTypes.map(a => `<option value="${a.id}" data-weight="${a.weight}">${a.name} (${a.weight}%)</option>`).join("");
 
 // Load achievement levels
 const { data: levels } = await supabase.from("achievement_levels").select("id, label").order("order_rank");
 
-// Load competencies and populate top core competencies
+// Load strands & substrands
+const { data: strands } = await supabase.from("strands").select("id, name").eq("subject_id", subjectId);
+const strandSelect = document.getElementById("strandSelect");
+strandSelect.innerHTML = `<option value="" disabled selected>-- Select Strand --</option>` + strands.map(s => `<option value="${s.id}">${s.name}</option>`).join("");
+strandSelect.onchange = async () => {
+  const strandId = strandSelect.value;
+  const { data: substrands } = await supabase.from("substrands").select("id, name").eq("strand_id", strandId);
+  const substrandSelect = document.getElementById("substrandSelect");
+  substrandSelect.innerHTML = `<option value="" disabled selected>-- Select Substrand --</option>` + substrands.map(s => `<option value="${s.id}">${s.name}</option>`).join("");
+};
+
+// Load global core competencies
 const { data: competencies } = await supabase.from("competencies").select("id, name, subject_id").or("is_active.is.null,is_active.eq.true").order("name");
 const coreContainer = document.getElementById("coreCompetenciesContainer");
+competencies.filter(c => !c.subject_id).forEach(c => {
+  const label = document.createElement("label");
+  label.className = "competency-checkbox";
+  const cb = document.createElement("input");
+  cb.type = "checkbox"; cb.value = c.id; cb.className="coreCompetency";
+  label.appendChild(cb); label.appendChild(document.createTextNode(c.name));
+  coreContainer.appendChild(label);
+});
 
-competencies
-  .filter(c => !c.subject_id)   // Only global core competencies
-  .forEach(c => {
-    const label = document.createElement("label");
-    label.className = "competency-checkbox";
+// Load students assigned to this teacher for this subject
+const { data: { user } } = await supabase.auth.getUser();
+if(!user) { window.location.href="index.html"; }
+const { data: profile } = await supabase.from("profiles").select("school_id").eq("auth_id", user.id).single();
+const schoolId = profile.school_id;
 
-    const checkbox = document.createElement("input");
-    checkbox.type = "checkbox";
-    checkbox.value = c.id;
-    checkbox.className = "coreCompetency";
-
-    label.appendChild(checkbox);
-    label.appendChild(document.createTextNode(c.name));
-
-    coreContainer.appendChild(label);
-  });
-
-// Load students
-const { data: students } = await supabase.from("students").select("id, admission_number, first_name, last_name").eq("class_id", classId).order("last_name");
+// Fetch students linked to teacher
+const { data: students } = await supabase.from("students")
+  .select("id, admission_number, first_name, last_name")
+  .eq("class_id", classId)
+  .in("id", supabase.from("teacher_class_subjects")
+       .select("student_id").eq("teacher_id", user.id).eq("subject_id", subjectId));
 const tbody = document.getElementById("studentsBody");
-if (!students?.length) tbody.innerHTML = `<tr><td colspan="3">No students in this class</td></tr>`;
-else tbody.innerHTML = students.map(s => `
+if(!students?.length) tbody.innerHTML=`<tr><td colspan="3">No students assigned to you.</td></tr>`;
+else tbody.innerHTML = students.map(s=>`
 <tr data-id="${s.id}">
-  <td>${s.admission_number || ""}</td>
-  <td>${s.first_name} ${s.last_name}</td>
-  <td>
-    <select class="performanceLevel">
-      <option value="">Select Level</option>
-      ${levels.map(l => `<option value="${l.id}">${l.label}</option>`).join("")}
-    </select>
-  </td>
+<td>${s.admission_number||""}</td>
+<td>${s.first_name} ${s.last_name}</td>
+<td>
+<select class="performanceLevel">
+<option value="">Select Level</option>
+${levels.map(l=>`<option value="${l.id}">${l.label}</option>`).join("")}
+</select>
+</td>
 </tr>`).join("");
 
 // Save assessment
-document.getElementById("saveAssessment").onclick = async () => {
-  const strand = document.getElementById("strandInput").value;
-  const substrand = document.getElementById("substrandInput").value;
+document.getElementById("saveAssessment").onclick = async ()=>{
   const termId = document.getElementById("termSelect").value;
-  const termName = document.getElementById("termSelect").selectedOptions[0]?.text;
+  const termOption = document.getElementById("termSelect").selectedOptions[0];
+  const termStart = new Date(termOption.dataset.start);
+  const termEnd = new Date(termOption.dataset.end);
+  const termName = termOption.textContent;
   const assessmentTypeId = document.getElementById("assessmentTypeSelect").value;
-const selectedCoreCompetencies = Array.from(
-  document.querySelectorAll(".coreCompetency:checked")
-).map(cb => cb.value);
+  const selectedCoreCompetencies = Array.from(document.querySelectorAll(".coreCompetency:checked")).map(cb=>cb.value);
   const subjectCompetency = document.getElementById("subjectCompetency").value;
+  const strand = document.getElementById("strandSelect").value;
+  const substrand = document.getElementById("substrandSelect").value;
+  const assessmentDate = new Date();
 
-  if (!termId || !assessmentTypeId) { alert("Select term and assessment type"); return; }
+  // Validation
+  if(!termId || !assessmentTypeId){ alert("Select term and assessment type"); return; }
+  if(selectedCoreCompetencies.length===0){ alert("Select at least one core competency"); return; }
+  const incomplete = Array.from(document.querySelectorAll(".performanceLevel")).some(sel=>!sel.value);
+  if(incomplete){ alert("Select performance level for all students"); return; }
+  if(assessmentDate < termStart || assessmentDate > termEnd){ alert("Assessment date must be within term dates"); return; }
 
-  const { data:{user} } = await supabase.auth.getUser();
-  if (!user) { window.location.href="index.html"; return; }
+  // Check for duplicate assessments within 7 days
+  const { data: recent } = await supabase.from("assessments")
+    .select("id, assessment_date")
+    .eq("class_id", classId)
+    .eq("subject_id", subjectId)
+    .eq("teacher_id", user.id)
+    .eq("assessment_type_id", assessmentTypeId)
+    .gte("assessment_date", new Date(Date.now()-7*24*3600*1000).toISOString());
+  if(recent?.length){ alert("You already created this assessment type in the last 7 days"); return; }
 
-  const { data: profile } = await supabase.from("profiles").select("school_id").eq("auth_id", user.id).single();
-  if (!profile?.school_id) { alert("Cannot determine school_id"); return; }
-  const schoolId = profile.school_id;
-
-  const today = new Date().toISOString();
-  const assessmentTitle = `${subjectData.name} - ${termName} (${academicYear})`;
-
-  // Insert assessment with top competencies
+  // Insert assessment
   const { data: assessment, error: assessmentError } = await supabase.from("assessments").insert([{
-    title: assessmentTitle,
-    class_id: classId,
-    subject_id: subjectId,
-    school_id: schoolId,
-    term_id: termId,
-    term: termName,
-    academic_year: academicYear,
-    assessment_type_id: assessmentTypeId,
-    learning_area_id: subjectId,
-    assessment_date: today,
-    created_by: user.id,
-    core_competencies: selectedCoreCompetencies,     // save array of core competency IDs
-    subject_competencies: subjectCompetency        // save manual input
+    title:`${subjectData.name} - ${termName} (${SYSTEM_YEAR})`,
+    class_id:classId, subject_id:subjectId, school_id:schoolId, term_id:termId,
+    assessment_type_id:assessmentTypeId, learning_area_id:subjectId,
+    assessment_date:assessmentDate.toISOString(), created_by:user.id,
+    teacher_id:user.id, core_competencies:selectedCoreCompetencies,
+    subject_competencies:subjectCompetency, strand, substrand, academic_year:SYSTEM_YEAR
   }]).select().single();
+  if(assessmentError){ document.getElementById("status").innerText=`Error: ${assessmentError.message}`; return; }
 
-  if (assessmentError) { document.getElementById("status").innerText = `Error: ${assessmentError.message}`; return; }
-
-  // Save results per student
-  const rows = Array.from(document.querySelectorAll("#studentsBody tr")).map(tr => ({
-    assessment_id: assessment.id,
-    student_id: tr.dataset.id,
-    subject_id: subjectId,
-    term_id: termId,
-    assessment_type_id: assessmentTypeId,
-    achievement_level_id: tr.querySelector(".performanceLevel").value,
-    strand,
-    substrand,
-    academic_year: academicYear,
-    teacher_id: user.id,
-    created_by: user.id
+  // Insert assessment results per student
+  const rows = Array.from(document.querySelectorAll("#studentsBody tr")).map(tr=>({
+    assessment_id:assessment.id, student_id:tr.dataset.id,
+    subject_id:subjectId, term_id:termId, assessment_type_id:assessmentTypeId,
+    achievement_level_id:tr.querySelector(".performanceLevel").value,
+    strand, substrand, academic_year:SYSTEM_YEAR, teacher_id:user.id, created_by:user.id
   }));
-
   const { error: resultError } = await supabase.from("assessment_results").insert(rows);
-  document.getElementById("status").innerText = resultError ? `Error saving results: ${resultError.message}` : "Assessment and results saved successfully!";
+  document.getElementById("status").innerText = resultError?`Error saving results: ${resultError.message}`:"Assessment and results saved successfully!";
 };
 </script>
-
 </body>
 </html>
